# MantraxEngine

./: .gitignore  GameObject_Auto_Model_Loading_Documentation.md  ImguiLoadExample.h  InitUI.lua  Input_System_JSON_Documentation.md  MantraxEngine.sln  MantraxEngine.vcxproj  MantraxEngine.vcxproj.filters  Object_Pipeline_Flow_Documentation.md  PhysX_Integration_Summary.md  README.md  Runtime_Object_Creation_Documentation.md  SimpleNodeBK.cpp  TestAspectRatio.lua  TestCanvasManagerEditor.lua  TestDragSystem.lua  TestUI.lua  TriggerEventDebug.md  UI_System_Documentation.md  build.py  example_scene_with_tiles.json  imgui.ini  solution_summary.md  sprite_animator_persistent_solution.md
MantraxCore/: MantraxCore.vcxproj  MantraxCore.vcxproj.filters  packages.config
MantraxGame/: MantraxGame.vcxproj  MantraxGame.vcxproj.filters
MantraxGame/src/: MantraxGame.cpp
build_app/: CMakeLists.txt
build_lib/: CMakeLists.txt
builds/: build_windows.py
builds/data/: imgui.ini
cmake/build_app/: CMakeLists.txt
cmake/build_lib/: CMakeLists.txt
cmake/windows/build_app/: CMakeLists.txt
cmake/windows/build_lib/: CMakeLists.txt
config/: input_config.json  materials_config.json
docs/: AnimatorEditor_Guide.md  AnimatorEditor_Implementation_Summary.md  AnimatorEditor_NewFeatures_Summary.md  AnimatorPath_Fix_Summary.md  CSM_Debug_Guide.md  CSM_Usage_Example.md  CameraSystem_Lua_Guide.md  CanvasBufferIntegration_Guide.md  ContentBrowser_Usage.md  DragDrop_Fix_Summary.md  GIZMOS_SCENE_RELOAD.md  InputEditor_Usage.md  Inspector_Animator_File_Loading_Guide.md  Inspector_Reorganization_Summary.md  PHYSICS_SCENE_CLEANUP.md  SCENE_LOADER_CLEANUP.md  SpriteAnimator_Fix_Guide.md
editor/: Editor-bk.cpp  Editor.cpp  SceneSaver.cpp  SceneSaver.h  SimpleNodeEditor.h
editor/EUI/: ComponentSerializer.cpp  ComponentSerializer.h  EditorInfo.cpp  EditorInfo.h  ImGuiLoader.cpp  ImGuiLoader.h  ImGuiThemes.h  UIBuilder.h
editor/Windows/: AnimatorEditor.cpp  AnimatorEditor.h  CanvasManager.cpp  CanvasManager.h  CanvasManagerExample.cpp  CanvasManagerTest.cpp  CanvasManager_README.md  ContentBrowser.cpp  ContentBrowser.h  EditorNode.cpp  EditorNode.h  FileExplorer.cpp  FileExplorer.h  FileSaveExamples.h  FileSaveUtils.cpp  FileSaveUtils.h  Gizmos.cpp  Gizmos.h  Hierarchy.cpp  Hierarchy.h  InputEditor.cpp  InputEditor.h  Inspector.cpp  Inspector.h  MNodeEditor.h  MainBar.cpp  MainBar.h  MaterialEditor.cpp  MaterialEditor.h  ProjectHub.cpp  ProjectHub.h  RenderWindows.cpp  RenderWindows.h  SceneView.cpp  SceneView.h  Selection.cpp  Selection.h  TileEditor.cpp  TileEditor.h  WindowBehaviour.h
engine/components/: AudioSource.cpp  AudioSource.h  CharacterController.h  Collider.cpp  Component.h  GameBehaviourFactory.h  GameObject.cpp  GameObject.h  LightComponent.cpp  LightComponent.h  MantraxBehaviour.h  PhysicalObject.cpp  PhysicalObject.h  Rigidbody.cpp  Scene.cpp  Scene.h  SpriteAnimatorDebugTest.lua  SpriteAnimatorInspectorExample.lua  SpriteAnimatorTest.lua  TestScene.cpp  TestScene.h  TileComponent.cpp  TileComponent.h
engine/core/: AudioManager.cpp  InputConfigLoader.cpp  InputConfigLoader.h  PhysicsEventCallback.cpp  PhysicsEventCallback.h  PhysicsEventHandler.cpp  RaycastSystem.cpp  UIDGenerator.h
engine/input/: InputAction.h
engine/mpak/: AudioNode.h  ConditionsNode.h  ConstNode.h  ConvertsNode.h  DebugNodes.h  DescomposerNode.h  EventsNode.h  GameObjectNode.h  MNodeEngine.cpp  MNodeEngine.h  MantraxCorePackBuilder.cpp  MantraxCorePackReader.cpp  MathNodes.h  RigidBodyNode.h  ShaderNode.h
engine/render/: AspectRatioManager.cpp  AssimpGeometry.cpp  Camera.cpp  DefaultShaders.cpp  DefaultShaders.h  Frustum.cpp  Frustum.h  Light.cpp  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  RenderConfig.h  RenderPipeline.cpp  RenderPipeline.h  Shader.h  ShadowManager.cpp  ShadowManager.h
engine/shaders/: ShadowFrag.glsl  StandardFragment.glsl  StandardVertex.glsl
engine/ui/: UIBehaviour.cpp  UIBehaviour.h  UIDragSystem.cpp  UIDragSystem.h
engine/wrapper/: CoreWrapper.cpp  CoreWrapper.h
scenes/: Empty Scene.scene  ExampleScene.scene  ModelScene.scene  TestCamera.scene  TestScene.scene
scripts/: ExampleScript.lua  PlayerController.lua  TestScript.lua
src/: AnchorTest.lua  AnimatorEditorCompleteTest.lua  AnimatorEditorTest.lua  AnimatorPathTest.lua  CameraControl.lua  CameraTest.lua  CanvasBufferTest.lua  DragDropDebugTest.lua  DragDropTest.lua  InspectorAnimatorTest.lua  SpriteAnimatorAddComponentTest.lua  SpriteAnimatorInspectorTest.lua  SpriteAnimatorPersistentTest.lua  TextureTest.lua
src/components/: AudioSource.cpp  AudioSource.h  CharacterController.cpp  CharacterController.h  Collider.cpp  Collider.h  Component.h  DLLLoader.cpp  DLLLoader.h  EventSystem.cpp  EventSystem.h  GameObject.cpp  GameObject.h  LightComponent.cpp  LightComponent.h  Loader.h  ModelScene.cpp  ModelScene.h  PhysicalObject.cpp  PhysicalObject.h  PhysicsTestScene.cpp  RigidBody.cpp  RigidBody.h  Rigidbody.cpp  Rigidbody.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ScriptExecutor.cpp  ScriptExecutor.h  SpriteAnimator.cpp  SpriteAnimator.h  SpriteAnimatorExample.cpp  SpriteAnimatorFinalTest.lua  SpriteAnimatorInspectorGuide.md  TestScene.cpp  TestScene.h  TexturedScene.cpp  TexturedScene.h  (+1 more)
src/core/: AudioManager.cpp  AudioManager.h  CoreExporter.h  CoreWrapper.cpp  CoreWrapper.h  FileSystem.cpp  FileSystem.h  InputConfigLoader.cpp  InputConfigLoader.h  PhysicsEventCallback.cpp  PhysicsEventCallback.h  PhysicsEventHandler.cpp  PhysicsEventHandler.h  PhysicsEvents.h  PhysicsManager.cpp  PhysicsManager.h  RaycastSystem.h  Time.h  UIDGenerator.cpp
src/input/: InputAction.h  InputSystem.h
src/main/: MantraxEngine.cpp
src/mpak/: MantraxCorePackBuilder.h  MantraxCorePackReader.h
src/render/: AspectRatioManager.h  AssimpGeometry.cpp  AssimpGeometry.h  Camera.cpp  Camera.h  DefaultShaders.cpp  DefaultShaders.h  Framebuffer.cpp  Framebuffer.h  Frustum.cpp  Frustum.h  Light.cpp  Light.h  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  ModelLoader.cpp  ModelLoader.h  (+10 more)
(+101 files in other folders)
